Added a base logic implementation for category management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@46 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -247,7 +247,7 @@ form .message {
 
 .message .actions { text-align: right; }
 
-.view, .add, .edit, .delete, .info, .success, .warning,
+.view, .add, .edit, .delete, .info, .success, .warning, .categories,
 .error, .help, .ok, .cancel, .search, .settings, .start, .products,
 .people, .calendar, .documents, .passwords, .accounts, .partners, .uoms,
 .save, .load, .refresh, .yes, .no, .enter, .exit, .person, .warehouses {
@@ -285,6 +285,7 @@ form .message {
 .person { background-image: url(images/person.png); }
 .products { background-image: url(images/product.png); }
 .warehouses { background-image: url(images/warehouse.png); }
+.categories { background-image: url(images/tag.png); }
 
 .sign { display: none; }
 .in { background: #dbf6cd; }
