Better "index" template.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@50 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/index.html
+++ b/core/templates/accounts/index.html
@@ -17,11 +17,15 @@
     <table>
         <thead>
             <td>{% trans 'Username' %}</td>
+            <td>{% trans 'Firstname' %}</td>
+            <td>{% trans 'Lastname' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
         {% for account in accounts %}
         <tr>
             <td>{{ account.username }}</td>
+            <td>{{ account.firstname|default:'<span class="disabled">empty.</span>' }}</td>
+            <td>{{ account.lastname|default:'<span class="disabled">empty.</span>' }}</td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/accounts/view/{{ account.id }}/">{% trans 'View' %}</a></li>
