--- a/warehouses/templates/warehouses/index.html
+++ b/warehouses/templates/warehouses/index.html
@@ -17,10 +17,20 @@
     <table>
         <thead>
             <td>{% trans 'Name' %}</td>
+            <td>{% trans 'Owner' %}</td>
+            <td>{% trans 'Actions' %}</td>
         </thead>
         {% for warehouse in warehouses %}
         <tr>
-            <td><a href="/warehouses/view/{{ warehouse.id }}/">{{ warehouse.name }}</a></td>
+            <td>{{ warehouse.name }}</td>
+            <td><a href="/partners/view/{{ warehouse.owner.id }}/">{{ warehouse.owner }}</a></td>
+            <td>
+                <ul class="actions">
+                    <li><a class="view" href="/warehouses/view/{{ warehouse.id }}/">{% trans 'View' %}</a></li>
+                    <li><a class="edit" href="/warehouses/edit/{{ warehouse.id }}/">{% trans 'Edit' %}</a></li>
+                    <li><a class="delete" href="/warehouses/delete/{{ warehouse.id }}/">{% trans 'Delete' %}</a></li>
+                </ul>
+            </td>
         </tr>
         {% endfor %}
     </table>
