--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -24,8 +24,8 @@
                 {% block nav %}
                 {% include "accounts/userarea.html" %}
                 {% include "menu/menubar.html" %}
-                <div id="breadcrumb">
-                    {% block breadcrumb %}
+                <div id="breadcrumbs">
+                    {% block breadcrumbs %}
                     {% endblock %}
                 </div>
                 {% endblock %}
