--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -377,7 +377,7 @@ form .message {
     border-left: 1px solid #000;
 }
 
-#breadcrumb {
+#breadcrumbs {
     width: 100%;
     float: left;
     font-size: 0.6em;
