--- a/core/templates/accounts/index.html
+++ b/core/templates/accounts/index.html
@@ -1,10 +1,14 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Accounts' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Accounts' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Accounts' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <div id="search">
