--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -1,10 +1,15 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}}
 
 {% block title %}{% trans 'Login' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Accounts' %} > {% trans 'Login' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Accounts' '/accounts/' %}
+    {% add_crumb 'Login' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
 
