--- a/core/templates/accounts/view.html
+++ b/core/templates/accounts/view.html
@@ -1,10 +1,16 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Accounts' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Accounts' %} > {% trans 'View' %} > {{ user }}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Accounts' '/accounts/' %}
+    {% add_crumb 'View' %}
+    {% add_crumb user %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <h3>{% trans 'Details' %}</h3>
