--- a/partners/templates/partners/add.html
+++ b/partners/templates/partners/add.html
@@ -1,10 +1,15 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Partners' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Partners' %} > {% trans 'Add' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Partners' '/partners/' %}
+    {% add_crumb 'Add' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <form action="/partners/add/" method="post">
