--- a/partners/templates/partners/edit.html
+++ b/partners/templates/partners/edit.html
@@ -1,10 +1,16 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Partners' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Partners' %} > {% trans 'Edit' %} > {{ partner }}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Partners' '/partners/' %}
+    {% add_crumb 'Edit' %}
+    {% add_crumb partner %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <form action="/partners/edit/{{ partner.id }}/" method="post">
