--- a/products/templates/products/categories/delete.html
+++ b/products/templates/products/categories/delete.html
@@ -1,10 +1,17 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Products' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Products' %} > {% trans 'Categories' %} > {% trans 'Delete' %} > {{ category }}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Products' '/products/' %}
+    {% add_crumb 'Categories' '/products/categories/' %}
+    {% add_crumb 'Delete' %}
+    {% add_crumb category %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <form action="/products/categories/delete/{{ category.id }}/" method="post">
@@ -17,8 +24,8 @@
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="/products/view/{{ category.id }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="/products/edit/{{ category.id }}">{% trans 'Edit' %}</a></li>
+        <li><a class="view" href="/products/categories/view/{{ category.id }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="/products/categories/edit/{{ category.id }}">{% trans 'Edit' %}</a></li>
         <li><a class="categories" href="/products/categories/">{% trans 'Categories' %}</a></li>
     </ul>
 {% endblock %}
