--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -1,10 +1,14 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Products' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Products' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Products' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <div id="search">
