--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -1,10 +1,16 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'Products' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'Products' %} > {% trans 'View' %} > {{ product }}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'Products' '/products/' %}
+    {% add_crumb 'View' %}
+    {% add_crumb product %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <h3>{% trans 'Details' %}</h3>
