--- a/uoms/templates/uoms/categories/add.html
+++ b/uoms/templates/uoms/categories/add.html
@@ -1,10 +1,16 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'UOMs' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'UOMs' %} > {% trans 'Categories' %} > {% trans 'Add' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'UOMs' '/uoms/' %}
+    {% add_crumb 'Categories' '/uoms/categories/' %}
+    {% add_crumb 'Add' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <form action="/uoms/categories/add/" method="post">
