--- a/uoms/templates/uoms/categories/edit.html
+++ b/uoms/templates/uoms/categories/edit.html
@@ -1,10 +1,17 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'UOMs' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'UOMs' %} > {% trans 'Categories' %} > {% trans 'Edit' %} > {{ category }}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'UOMs' '/uoms/' %}
+    {% add_crumb 'Categories' '/uoms/categories/' %}
+    {% add_crumb 'Edit' %}
+    {% add_crumb category %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <form action="/uoms/categories/edit/{{ category.id }}/" method="post">
