--- a/uoms/templates/uoms/index.html
+++ b/uoms/templates/uoms/index.html
@@ -1,10 +1,14 @@
 {% extends 'layout.html' %}
 
 {% load i18n %}
+{% load breadcrumbs %}
 
 {% block title %}{% trans 'UOMs' %}{% endblock %}
 
-{% block breadcrumb %}<h2>{% trans 'UOMs' %}</h2>{% endblock %}
+{% block breadcrumbs %}
+    {% add_crumb 'UOMs' %}
+    <h2>{% render_breadcrumbs %}</h2>
+{% endblock %}
 
 {% block content %}
     <div id="search">
