Some improvements in table data rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@57 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/categories/view.html
+++ b/products/templates/products/categories/view.html
@@ -35,7 +35,7 @@
         <tr>
             <td>{{ product.name }}</td>
             <td>{{ product.code }}</td>
-            <td>{% blocktrans with product.type as type %}{{ type }}{% endblocktrans %}</td>
+            <td>{% blocktrans with product.get_type_display as type %}{{ type }}{% endblocktrans %}</td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/products/view/{{ product.id }}/">{% trans 'View' %}</a></li>
