--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -30,7 +30,7 @@
         <tr>
             <td>{{ product.name }}</td>
             <td>{{ product.code }}</td>
-            <td>{% blocktrans with product.type as type %}{{ type }}{% endblocktrans %}</td>
+            <td>{% blocktrans with product.get_type_display as type %}{{ type }}{% endblocktrans %}</td>
             <td><a href="/products/categories/view/{{ product.category.id }}/">{{ product.category }}</a></td>
             <td>
                 <ul class="actions">
