Bad CSS class fixed in all account templates.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@60 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/add.html
+++ b/core/templates/accounts/add.html
@@ -17,6 +17,6 @@
         <input class="save" type="submit" value="{% trans 'Save' %}"/>
     </form>
     <ul class="actions">
-        <li><a class="people" href="/accounts/">{% trans 'Accounts' %}</a></li>
+        <li><a class="accounts" href="/accounts/">{% trans 'Accounts' %}</a></li>
     </ul>
 {% endblock %}
