--- a/core/templates/accounts/delete.html
+++ b/core/templates/accounts/delete.html
@@ -25,6 +25,6 @@
     <ul class="actions">
         <li><a class="view" href="/accounts/view/{{ user.id }}">{% trans 'View' %}</a></li>
         <li><a class="delete" href="/accounts/edit/{{ user.id }}">{% trans 'Edit' %}</a></li>
-        <li><a class="people" href="/accounts/">{% trans 'Accounts' %}</a></li>
+        <li><a class="accounts" href="/accounts/">{% trans 'Accounts' %}</a></li>
     </ul>
 {% endblock %}
