--- a/core/templates/accounts/edit.html
+++ b/core/templates/accounts/edit.html
@@ -20,6 +20,6 @@
     <ul class="actions">
         <li><a class="view" href="/accounts/view/{{ user.id }}">{% trans 'View' %}</a></li>
         <li><a class="delete" href="/accounts/delete/{{ user.id }}">{% trans 'Delete' %}</a></li>
-        <li><a class="people" href="/accounts/">{% trans 'Accounts' %}</a></li>
+        <li><a class="accounts" href="/accounts/">{% trans 'Accounts' %}</a></li>
     </ul>
 {% endblock %}
