--- a/core/templates/accounts/view.html
+++ b/core/templates/accounts/view.html
@@ -18,6 +18,6 @@
     <ul class="actions">
         <li><a class="edit" href="/accounts/edit/{{ user.id }}/">{% trans 'Edit' %}</a></li>
         <li><a class="delete" href="/accounts/delete/{{ user.id }}/">{% trans 'Delete' %}</a></li>
-        <li><a class="people" href="/accounts/">{% trans 'Accounts' %}</a></li>
+        <li><a class="accounts" href="/accounts/">{% trans 'Accounts' %}</a></li>
     </ul>
 {% endblock %}
