--- a/warehouses/templates/warehouses/index.html
+++ b/warehouses/templates/warehouses/index.html
@@ -22,12 +22,14 @@
         <thead>
             <td>{% trans 'Name' %}</td>
             <td>{% trans 'Owner' %}</td>
+            <td>{% trans 'Value' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
         {% for warehouse in warehouses %}
         <tr>
             <td>{{ warehouse.name }}</td>
-            <td><a href="/partners/view/{{ warehouse.owner.id }}/">{{ warehouse.owner }}</a></td>
+            <td><a href="{{ warehouse.owner.get_absolute_url }}">{{ warehouse.owner }}</a></td>
+            <td class="number">{{ warehouse.value }}</td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/warehouses/view/{{ warehouse.id }}/">{% trans 'View' %}</a></li>
