--- a/warehouses/templates/warehouses/movements/index.html
+++ b/warehouses/templates/warehouses/movements/index.html
@@ -7,22 +7,18 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' '/warehouses/' %}
-    {% add_crumb 'View' %}
-    {% add_crumb warehouse %}
+    {% add_crumb 'Movements' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
-    <h3>{% trans 'Details' %}</h3>
-    {{ details.as_dl }}
-    <h3>{% trans 'Movements' %}</h3>
     <div id="search">
-        <form action="{{ warehouse.get_absolute_url }}/" method="post">
+        <form action="/warehouses/movements/" method="post">
             <input type="text" name="query"/>
             <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
         </form>
     </div>
-    {% if warehouse.movement_set.all %}
+    {% if movements %}
     <table>
         <thead>
             <td>{% trans 'Quantity' %}</td>
@@ -30,15 +26,17 @@
             <td>{% trans 'Product' %}</td>
             <td>{% trans 'Value' %}</td>
             <td>{% trans 'On' %}</td>
+            <td>{% trans 'Warehouse' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
-        {% for movement in warehouse.movement_set.all %}
+        {% for movement in movements %}
         <tr class="{% if movement.verse %}in{% else %}out{% endif %}">
             <td class="number"><strong class="sign">{% if movement.verse %}+{% else %}-{% endif %}</strong>{{ movement.quantity|cut:"-" }}</td>
             <td><a href="/uoms/view/{{ movement.product.uom.id }}/">{{ movement.product.uom }}</a></td>
             <td><a href="/products/view/{{ movement.product.id }}/">{{ movement.product }}</a></td>
             <td class="number">{{ movement.value|cut:"-" }}</td>
             <td>{{ movement.last_modified }}</td>
+            <td><a href="{{ movement.warehouse.get_absolute_url }}">{{ movement.warehouse }}</a></td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/warehouses/movements/view/{{ movement.id }}/">{% trans 'View' %}</a></li>
@@ -55,9 +53,6 @@
     <p class="disabled">{% trans 'empty' %}.</p>
     {% endif %}
     <ul class="actions">
-        <li><a class="edit" href="/warehouses/edit/{{ warehouse.id }}/">{% trans 'Edit' %}</a></li>
-        <li><a class="delete" href="/warehouses/delete/{{ warehouse.id }}/">{% trans 'Delete' %}</a></li>
-        <li><a class="movements" href="/warehouses/movements/add/{{ warehouse.id }}/">{% trans 'New movement' %}</a></li>
         <li><a class="warehouses" href="/warehouses/">{% trans 'Warehouses' %}</a></li>
-    </ul>    
+    </ul>
 {% endblock %}
