--- a/partners/templates/partners/index.html
+++ b/partners/templates/partners/index.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Partners' %}</h3>
     <div id="search">
         <form action="/partners/" method="post">
             <input type="text" name="query"/>
