--- a/products/templates/products/categories/index.html
+++ b/products/templates/products/categories/index.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Categories' %}</h3>
     <div id="search">
         <form action="/products/categories/" method="post">
             <input type="text" name="query"/>
