--- a/uoms/templates/uoms/index.html
+++ b/uoms/templates/uoms/index.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'UOMs' %}</h3>
     <div id="search">
         <form action="/uoms/" method="post">
             <input type="text" name="query"/>
