--- a/warehouses/templates/warehouses/movements/view.html
+++ b/warehouses/templates/warehouses/movements/view.html
@@ -7,8 +7,10 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' '/warehouses/' %}
-    {% add_crumb 'View' %}
-    {% add_crumb warehouse %}
+    {% with movement.warehouse.get_absolute_path as wlink %}
+    {% add_crumb 'Movements' wlink %}
+    {% endwith %}
+    {% add_crumb movement %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
