--- a/core/templates/accounts/delete.html
+++ b/core/templates/accounts/delete.html
@@ -7,12 +7,12 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Accounts' '/accounts/' %}
-    {% add_crumb 'Delete' %}
     {% add_crumb user %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Delete' %}</h3>
     <form action="/accounts/delete/{{ user.id }}/" method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this account and all its related informations?' %}</p>
