--- a/core/templates/accounts/index.html
+++ b/core/templates/accounts/index.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Accounts' %}</h3>
     <div id="search">
         <form action="/accounts/" method="post">
             <input type="text" name="query"/>
