--- a/products/templates/products/categories/edit.html
+++ b/products/templates/products/categories/edit.html
@@ -8,12 +8,12 @@
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
     {% add_crumb 'Categories' '/products/categories/' %}
-    {% add_crumb 'Edit' %}
     {% add_crumb category %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Edit' %}</h3>
     <form action="/products/categories/edit/{{ category.id }}/" method="post">
         {{ form.as_p }}
         <input class="save" type="submit" value="{% trans 'Save' %}" />
