--- a/products/templates/products/delete.html
+++ b/products/templates/products/delete.html
@@ -7,12 +7,12 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
-    {% add_crumb 'Delete' %}
     {% add_crumb product %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Delete' %}</h3>
     <form action="/products/delete/{{ product.id }}/" method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this product and all its related informations?' %}</p>
