--- a/uoms/templates/uoms/delete.html
+++ b/uoms/templates/uoms/delete.html
@@ -7,12 +7,12 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'UOMs' '/uoms/' %}
-    {% add_crumb 'Delete' %}
     {% add_crumb uom %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Delete' %}</h3>
     <form action="/uoms/delete/{{ uom.id }}/" method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this uom and all its related informations?' %}</p>
