--- a/warehouses/templates/warehouses/delete.html
+++ b/warehouses/templates/warehouses/delete.html
@@ -7,12 +7,12 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' '/warehouses/' %}
-    {% add_crumb 'Delete' %}
     {% add_crumb warehouse %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Delete' %}</h3>
     <form action="/warehouses/delete/{{ warehouse.id }}/" method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this warehouse and all its related informations?' %}</p>
