--- a/warehouses/templates/warehouses/index.html
+++ b/warehouses/templates/warehouses/index.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Warehouses' %}</h3>
     <div id="search">
         <form action="/warehouses/" method="post">
             <input type="text" name="query"/>
