--- a/warehouses/templates/warehouses/movements/add.html
+++ b/warehouses/templates/warehouses/movements/add.html
@@ -7,17 +7,20 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' '/warehouses/' %}
-    {% add_crumb 'Movements' warehouse.get_absolute_path %}
+    {% with movement.warehouse.get_absolute_path as wlink %}
+    {% add_crumb 'Movements' wlink %}
+    {% endwith %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
-    <form action="/warehouses/movements/add/{{ warehouse.id }}/" method="post">
+    <h3>{% trans 'Add' %}</h3>
+    <form action="/warehouses/movements/add/{{ movement.warehouse.id }}/" method="post">
         {{ form.as_p }}
         <input class="save" type="submit" value="{% trans 'Save' %}"/>
     </form>
     <ul class="actions">
-        <li><a class="warehouses" href="{{ warehouse.get_absolute_url }}">{% trans 'Warehouse' %}</a></li>
+        <li><a class="warehouses" href="{{ movement.warehouse.get_absolute_url }}">{% trans 'Warehouse' %}</a></li>
     </ul>
 {% endblock %}
