--- a/warehouses/templates/warehouses/movements/index.html
+++ b/warehouses/templates/warehouses/movements/index.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+    <h3>{% trans 'Movements' %}</h3>
     <div id="search">
         <form action="/warehouses/movements/" method="post">
             <input type="text" name="query"/>
