--- a/partners/templates/partners/edit.html
+++ b/partners/templates/partners/edit.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/partners/edit/{{ partner.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/partners/view/{{ partner.id }}">{% trans 'View' %}</a></li>
