--- a/core/templates/accounts/edit.html
+++ b/core/templates/accounts/edit.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/accounts/edit/{{ user.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/accounts/view/{{ user.id }}">{% trans 'View' %}</a></li>
