--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Add' %}</h3>
     <form action="/products/add/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}"/>
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>>
     </form>
     <ul class="actions">
         <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
