--- a/products/templates/products/categories/edit.html
+++ b/products/templates/products/categories/edit.html
@@ -16,7 +16,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/products/categories/edit/{{ category.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/products/categories/view/{{ category.id }}">{% trans 'View' %}</a></li>
