--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/products/edit/{{ product.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/products/view/{{ product.id }}">{% trans 'View' %}</a></li>
