--- a/uoms/templates/uoms/add.html
+++ b/uoms/templates/uoms/add.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Add' %}</h3>
     <form action="/uoms/add/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}"/>
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="uoms" href="/uoms/">{% trans 'UOMs' %}</a></li>
