--- a/uoms/templates/uoms/categories/add.html
+++ b/uoms/templates/uoms/categories/add.html
@@ -16,7 +16,9 @@
     <h3>{% trans 'Add' %}</h3>
     <form action="/uoms/categories/add/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}"/>
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="categories" href="/uoms/categories">{% trans 'Categories' %}</a></li>
