--- a/uoms/templates/uoms/edit.html
+++ b/uoms/templates/uoms/edit.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/uoms/edit/{{ uom.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/uoms/view/{{ uom.id }}">{% trans 'View' %}</a></li>
