--- a/warehouses/templates/warehouses/add.html
+++ b/warehouses/templates/warehouses/add.html
@@ -15,7 +15,9 @@
     <h3>{% trans 'Add' %}</h3>
     <form action="/warehouses/add/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}"/>
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="warehouses" href="/warehouses/">{% trans 'Warehouses' %}</a></li>
