--- a/warehouses/templates/warehouses/movements/edit.html
+++ b/warehouses/templates/warehouses/movements/edit.html
@@ -18,7 +18,9 @@
     <h3>{% trans 'Edit' %}</h3>
     <form action="/warehouses/movements/edit/{{ movement.id }}/" method="post">
         {{ form.as_p }}
-        <input class="save" type="submit" value="{% trans 'Save' %}" />
+        <div class="actions">
+            <input class="save" type="submit" value="{% trans 'Save' %}" />
+        </div>
     </form>
     <ul class="actions">
         <li><a class="view" href="/warehouses/movements/view/{{ movement.id }}">{% trans 'View' %}</a></li>
